@@ -1,0 +1,15 @@
+{
+  "images" : [
+    {
+      "filename" : "Group 599.svg",
+      "idiom" : "universal"
+    }
+  ],
+  "info" : {
+    "author" : "xcode",
+    "version" : 1
+  },
+  "properties" : {
+    "preserves-vector-representation" : true
+  }
+}
